--- a/favicon/manifest.json
+++ b/favicon/manifest.json
@@ -2,16 +2,16 @@
 	"name": "Build-a-PC",
 	"icons": [
 		{
-			"src": "\/favicon\/android-chrome-192x192.png",
+			"src": "\/favicon\/android-chrome-192x192.png?v=Om5QWMBdJg",
 			"sizes": "192x192",
 			"type": "image\/png"
 		},
 		{
-			"src": "\/favicon\/android-chrome-512x512.png",
+			"src": "\/favicon\/android-chrome-512x512.png?v=Om5QWMBdJg",
 			"sizes": "512x512",
 			"type": "image\/png"
 		}
 	],
-	"theme_color": "#ffffff",
+	"theme_color": "#444444",
 	"display": "standalone"
 }
